manifests/age.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: age
  namespace: weops-lite
  labels:
    app: age
spec:
  replicas: 1
  selector:
    matchLabels:
      app: age
  template:
    metadata:
      labels:
        app: age
    spec:
      containers:
      - name: age
        image: docker-bkrepo.cwoa.net/ce1b09/weops-docker/age:PG16-1.1.5
        volumeMounts:
        - mountPath: /data/postgres
          name: postgres-storage
        readinessProbe:
          exec:
            command: ["pg_isready", "-U", "postgres"]
          initialDelaySeconds: 10
          periodSeconds: 10
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: age-pvc
