manifests/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: weops-lite
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: docker-bkrepo.cwoa.net/ce1b09/weops-docker/keycloak:23.0.5
        volumeMounts:
        - mountPath: /etc/localtime
          name: localtime
          readOnly: true
        readinessProbe:
          exec:
            command: ["curl", "-f", "http://localhost:8080/"]
          initialDelaySeconds: 10
          periodSeconds: 10
      volumes:
      - name: localtime
        hostPath:
          path: /etc/localtime
          type: File
