manifests/age-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: age
  namespace: weops-lite
spec:
  ports:
    - port: 5432
  selector:
    app: age
