manifests/keycloak-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: weops-lite
spec:
  ports:
    - port: 8080
  selector:
    app: keycloak
